--- a/crud-spring/src/main/resources/application.properties
+++ b/crud-spring/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# datasource
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.datasource.url = jdbc:mysql://localhost:3306/crud_spring
+spring.datasource.username=root
+spring.datasource.password=root
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 
